# MissileDefenceSimulation

./: .gitignore  README.md  main.py  parameters.json  pyproject.toml  run.bat  run.sh
src/: __init__.py  defences.py  drawable.py  json_loadable.py  json_loader.py  missiles.py  simulation.py  simulation_settings.py  spawner.py  tracker.py  util.py  viewer.py  viewer_settings.py
tst/: template.py
