[tool.poetry]
name = 'MissileDefenceSimulation'
version = "0.1.0"
description = "Prototype project of a simple defence simulation"
authors = ["Michal van Hooft <michal.vanhooft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
imageio = "^2"
# opencv-python has no poetry version for python 3.9
# But opencv-python works if installed via pip, so this will happen in the shell scripts
# opencv-python = "^4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masontry.api"
